feat: get template by id
