# src/rest/controller/index.ts
@@ -1,1 +1,3 @@
 export * from './health.controller';
+export * from './github-installation.controller';
+export * from './template.controller';
