# src/rest/controller/template.controller.ts
@@ -1,6 +1,18 @@
-import { Body, Controller, Get, Param, Put } from '@nestjs/common';
+import {
+  Body,
+  Controller,
+  Get,
+  NotFoundException,
+  Param,
+  Put,
+  Query,
+} from '@nestjs/common';
 import { TemplateService } from 'src/service';
-import { ApiPagination, ApiRequiredSpec } from '../swagger/decorator';
+import {
+  ApiCriteria,
+  ApiPagination,
+  ApiRequiredSpec,
+} from '../swagger/decorator';
 import { GenerateTemplate, Template } from '../model';
 import { ApiBody, ApiTags } from '@nestjs/swagger';
 import { Pagination, PaginationParams } from '../decorator';
@@ -15,12 +27,31 @@ export class TemplateController {
     private readonly templateMapper: TemplateMapper,
   ) {}
 
+  @Get('/templates/:id')
+  @ApiRequiredSpec({ operationId: 'getTemplateById', type: Template })
+  async findTemplateById(@Param('id') id: string) {
+    const template = await this.templateService.findById(id);
+
+    if (!template) {
+      throw new NotFoundException();
+    }
+
+    return this.templateMapper.toRest(template);
+  }
+
   @Get('/templates')
   @ApiPagination()
   @ApiRequiredSpec({ operationId: 'getTemplates', type: [Template] })
+  @ApiCriteria({ type: 'string', name: 'name' })
   @ApiPagination()
-  async findTemplates(@Pagination() pagination: PaginationParams) {
-    const templates = await this.templateService.findAll(pagination, {});
+  async findTemplates(
+    @Pagination() pagination: PaginationParams,
+    @Query('name') name: string,
+  ) {
+    const templates = await this.templateService.findAll(pagination, {
+      name,
+    });
+
     return Promise.all(
       templates.map((template) => this.templateMapper.toRest(template)),
     );
@@ -28,35 +59,30 @@ export class TemplateController {
 
   @Put('/templates')
   @ApiRequiredSpec({ operationId: 'crupdateTemplates', type: [Template] })
-  @ApiBody({
-    type: [Template],
-  })
+  @ApiBody({ type: [Template] })
   @Authenticated()
   async saveTemplates(@Body() templates: Template[]) {
     const domainTemplates = await Promise.all(
       templates.map((template) => this.templateMapper.toDomain(template)),
     );
+
     const savedTemplates = await this.templateService.save(domainTemplates);
+
     return Promise.all(
       savedTemplates.map((template) => this.templateMapper.toRest(template)),
     );
   }
 
   @Put('/templates/:id/generate')
-  @ApiRequiredSpec({
-    operationId: 'generateTemplate',
-    type: [Template],
-  })
-  @ApiBody({
-    type: [GenerateTemplate],
-  })
+  @ApiRequiredSpec({ operationId: 'generateTemplate', type: GenerateTemplate })
+  @ApiBody({ type: GenerateTemplate })
   async generateTemplates(
     @Param('id') id: string,
-    @Body() generateTemplates: GenerateTemplate,
+    @Body() generateTemplate: GenerateTemplate,
   ) {
     const repositories = await this.templateService.generate(
       id,
-      generateTemplates,
+      generateTemplate,
     );
     return repositories;
   }
